add get-multiple endpoint to go server items API
